<resources>
    <string name="app_name">Naimo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Naimo: 나만의 단어장</string>
    <string name="nav_header_title2">(영단어, 사람이름외우기)</string>
    <string name="nav_header_subtitle">k2@uos.ac.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-1223086504427380/5914688153</string>
    <string name="txt_Memo">Memo</string>
    <string name="btnName_delete">Delete</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="maxtrix_size">Matrix Size</string>
    <string name="txt_Name">name</string>
    <string name="modify">Modify</string>
    <string name="count">Count</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="theWordIsModified">단어가 수정되었습니다.</string>
    <string name="cancle">Cancle</string>
    <string name="preDeleteConfirmMessage">Delete this Note \"</string>
    <string name="postDeleteConfirmMessage">\" ?</string>
    <string name="add">Add</string>
    <string name="New_Book">새 노트</string>
    <string name="ok">OK</string>
    <string name="noWordMessage">실행 가능한 단어가 없습니다. 단어를 추가한 후 실행하세요.</string>
    <string name="noSelection">Selection empty.</string>
    <string name="search_title">Search</string>
    <string name="deleteWords">단어 지우기</string>
    <string name="sizeofQuizArray">퀴즈 행렬 크기</string>
    <string name="exportWordZIP">내보내기 (Naimo ZIP파일)</string>
    <string name="Familiarity">FI</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_activity_folder_selection">FolderSelectionActivity</string>
    <string name="title_activity_pair_game">PairGameActivity</string>
    <string name="title_activity_word_list">WordListActivity</string>

    <string name="title_activity_get_daum_public_word_note">DAUM 공개단어장 불러오기</string>
    <string name="privacyPolicy">개인정보처리방침</string>
    <string name="review">어플 리뷰</string>
    <string name="delete">삭제</string>
    <string name="exKeyString01">초등 단어장</string>
    <string name="exKeyString02">중등 단어장</string>
    <string name="exKeyString03">고등 단어장</string>
    <string name="exKeyString04">TOEIC 단어장</string>
    <string name="exKeyString05">회화 단어장</string>
    <string name="exKeyString06">사람이름 외우기(한국의 대통령)</string>

    <string name="confirmDeletion">Delete Confirm</string>
    <string name="loading">loading...</string>
    <string name="title_activity_add_word_from_daum">AddWordFromDaumActivity</string>

</resources>
