<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/import_wordNote_DAUM"
        android:title="DAUM 공개단어장 불러오기" />
    <item
        android:enabled="true"
        android:icon="@drawable/plus_note"
        android:orderInCategory="100"
        android:title="샘플 단어장 가져오기"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/add_sample_note_01"
                android:title="@string/exKeyString01" />
            <item
                android:id="@+id/add_sample_note_02"
                android:title="@string/exKeyString02" />
            <item
                android:id="@+id/add_sample_note_03"
                android:title="@string/exKeyString03" />
            <item
                android:id="@+id/add_sample_note_04"
                android:title="@string/exKeyString04" />
            <item
                android:id="@+id/add_sample_note_05"
                android:title="@string/exKeyString05" />
            <item
                android:id="@+id/add_sample_note_06"
                android:title="@string/exKeyString06" />
        </menu>
    </item>
</menu>
